--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
-           android:textStyle="bold"
-           android:fontFamily="@font/source_sans_pro"
+           android:fontFamily="@font/source_sans_pro_bold"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
@@ -36,8 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/location"
                 android:textColor="@color/white"
-                android:textStyle="bold"
-                android:fontFamily="@font/source_sans_pro"
+                android:fontFamily="@font/source_sans_pro_bold"
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="@dimen/_8sdp"
                 android:layout_marginBottom="@dimen/_5sdp"/>
@@ -49,11 +47,10 @@
                 android:layout_marginLeft="@dimen/_8sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/ic_baseline_location_on_24"
-                android:fontFamily="@font/source_sans_pro"
+                android:fontFamily="@font/source_sans_pro_bold"
                 android:text="India"
                 android:id="@+id/tvLocation"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+                android:textColor="@color/white"/>
 
 
         </LinearLayout>
@@ -117,7 +114,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sort:"/>
+                android:text="Sort:"
+                android:fontFamily="@font/source_sans_pro"/>
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
