--- a/app/src/main/res/layout/adapter_coutry.xml
+++ b/app/src/main/res/layout/adapter_coutry.xml
@@ -17,7 +17,7 @@
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/secondary_accent"
+        android:id="@+id/rbCountry"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"/>
 
