--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:fontFamily="@font/source_sans_pro_bold"
-           android:layout_alignParentBottom="true"
-           android:layout_marginLeft="@dimen/_8sdp"
-           android:layout_marginBottom="@dimen/_5sdp"/>
+           android:layout_centerVertical="true"
+           android:layout_marginLeft="@dimen/_8sdp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:id="@+id/llCountry"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_5sdp">
@@ -82,6 +82,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:padding="@dimen/_4sdp"
+            android:id="@+id/ivSearch"
             android:layout_weight=".1"
             android:src="@drawable/ic_baseline_search_24"/>
 
@@ -135,6 +136,32 @@
         android:layout_marginHorizontal="@dimen/_8sdp"
         android:layout_marginTop="@dimen/_8sdp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/llNoresult"
+        android:visibility="gone"
+        android:layout_centerVertical="true">
+
+        <ImageView
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_120sdp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_baseline_article_24"
+            app:tint="@color/secondary_accent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="No result found!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/black"
+            android:fontFamily="@font/source_sans_pro"/>
+
+    </LinearLayout>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
