--- a/app/src/main/res/layout/adapter_source.xml
+++ b/app/src/main/res/layout/adapter_source.xml
@@ -18,6 +18,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/cbox"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"/>
 
